[package]
name = "mta_status"
version = "0.1.1"
authors = ["toidiu <toidiu@protonmail.com>"]

[dependencies]
xml-rs = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
html5ever = "0.18"
tokio-core = "0.1.12"
tokio-io = "0.1.4"
futures = "0.1.18"
num_cpus = "1.6.2"
log="0.4.1"
log4rs="0.8.0"

[dependencies.hyper]
version = "0.11.15"
#branch = "master"
#git = "https://github.com/hyperium/hyper"

[dependencies.clippy]
git = "https://github.com/rust-lang-nursery/rust-clippy.git"
rev = "3cf0fff394d7302678041"
optional = true
### Install proper nightly toolchain(OSX) and set as default
# rustup install nightly-2017-08-07-x86_64-apple-darwin
# rustup default nightly-2017-08-07-x86_64-apple-darwin
### Build clippy specified in this project
#  cargo build --features "clippy"
### Install and run clippy globally
# rustup run nightly-2017-08-07-x86_64-apple-darwin cargo install --git "https://github.com/rust-lang-nursery/rust-clippy.git" --rev "3cf0fff" clippy
# rustup run nightly-2017-08-07-x86_64-apple-darwin cargo clippy

[[bin]]
name = "mta-status"
test = true
path = "src/bin/main.rs"
