[package]
name = "mta_status"
version = "1.0.0"
authors = ["toidiu <toidiu@protonmail.com>"]

[dependencies]
xml-rs = "0.7"
serde = "1.0"
pretty_env_logger = "0.2.0"
serde_json = "1.0"
serde_derive = "1.0"
html5ever = "0.22"
tokio-core = "0.1.12"
tokio-io = "0.1.4"
futures = "0.1.18"
futures-cpupool = "0.1"
num_cpus = "1.6.2"
log="0.4.1"
log4rs="0.8.0"
net2 = "0.2.30"

[dependencies.hyper]
version = "0.11"
#branch = "master"
#git = "https://github.com/hyperium/hyper"

[dependencies.clippy]
git = "https://github.com/rust-lang-nursery/rust-clippy.git"
rev = "3cf0fff394d7302678041"
optional = true
### Install proper nightly toolchain(OSX) and set as default
# rustup install nightly-2017-08-07-x86_64-apple-darwin
# rustup default nightly-2017-08-07-x86_64-apple-darwin
### Build clippy specified in this project
#  cargo build --features "clippy"
### Install and run clippy globally
# rustup run nightly-2017-08-07-x86_64-apple-darwin cargo install --git "https://github.com/rust-lang-nursery/rust-clippy.git" --rev "3cf0fff" clippy
# rustup run nightly-2017-08-07-x86_64-apple-darwin cargo clippy

[[bin]]
name = "mta-status"
test = true
path = "src/bin/main.rs"
